--- a/axes.html
+++ b/axes.html
@@ -10,9 +10,8 @@ var x = d3.scaleBand().domain([0,1,2,3,4,5])range([0,width]);
 var y = d3.scaleLinear().domain([0,42]).range([height,0])
 var margin = {top: 50, right:50, bottom:50, left:50};
 
-var chart = d3.select("svg")
-
-chart.attr("width", width + 2*margin)
+d3.select("svg")
+  .attr("width", width + 2*margin)
   .attr("height", height + 2*margin)
   .append("g")
     .attr("transform", "translate("+margin+","+margin+")")
@@ -24,13 +23,12 @@ chart.attr("width", width + 2*margin)
     .attr("x", function (d,i) {return x(i);})
     .attr("y", function(d) {return y(d);});
 
-chart.append("g")
+d3.select("svg").append("g")
   .attr("transform", "translate("+margin+","+(height+margin)+")")
   .call(d3.axisBottom(x));
 
-chart.append("g")
+d3.select("svg").append("g")
   .attr("transform","translate("+margin+","+margin+")")
   .call(d3.axisLeft(y));
-  </script>
 </body>
 </html>
